--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
             <div class="icons">
                 <a href="https://www.linkedin.com/in/gian-baccin-58957216b/" target="_blank"><ion-icon class="ativo"  name="logo-linkedin"></ion-icon></a>
                 <a href="https://github.com/Gian-Baccin" target="_blank"><ion-icon class="ativo" name="logo-github"></ion-icon></a>
-                <a href=""><ion-icon class="inativo"  name="mail-outline"></ion-icon></a>
-
-                <a href=""><ion-icon class="inativo" name="logo-whatsapp"></ion-icon></a>
+                <!-- <a href=""><ion-icon class="inativo"  name="mail-outline"></ion-icon></a>
+                <a href=""><ion-icon class="inativo" name="logo-whatsapp"></ion-icon></a>-->
                 <a href="https://www.facebook.com/profile.php?id=100013366537751" target="_blank"><ion-icon class="ativo"  name="logo-facebook"></ion-icon></a>
                 <a href="https://www.instagram.com/gian.ciclope/" target="_blank"><ion-icon class="ativo"  name="logo-instagram"></ion-icon></a>
-                <a href="https://twitter.com/GianCiclope" target="_blank"><ion-icon class="ativo"  name="logo-twitter"></ion-icon></a>
+                <!--<a href="https://twitter.com/GianCiclope" target="_blank"><ion-icon class="ativo"  name="logo-twitter"></ion-icon></a>-->
                 <a href=""><ion-icon class="inativo" name="logo-discord"></ion-icon></a>
-                <a href="https://www.youtube.com/channel/UCLewYKWk4YqjxZsjwy8tKRQ" target="_blank"><ion-icon class="ativo" name="logo-youtube"></ion-icon></a>
-                <a href="https://www.twitch.tv/ciclopexp" target="_blank"><ion-icon class="ativo"  name="logo-twitch"></ion-icon></a>
+                <!--<a href="https://www.youtube.com/channel/UCLewYKWk4YqjxZsjwy8tKRQ" target="_blank"><ion-icon class="ativo" name="logo-youtube"></ion-icon></a>
+                <a href="https://www.twitch.tv/ciclopexp" target="_blank"><ion-icon class="ativo"  name="logo-twitch"></ion-icon></a>-->
             </div>
 
         </div>
