--- a/index.html
+++ b/index.html
@@ -317,6 +317,17 @@ body{
         align-items: center;
         justify-content: center;
     }
+    .icons{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .logo img{
+        margin: 80px;
+    }
+    .gr{
+        margin-top: 50px;
+        text-align: center;
+    }
 }
-
 </style>
