--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="buttons">
                 <div class="container-btn">
-                    <button onclick="encode()" class="btn-encode">Encode</button>
+                    <button a href="bottom" onclick="encode()" class="btn-encode">Encode</button>
                     <button onclick="decode()" class="btn-decode">Decode</button>
                 </div>
             </div>
@@ -55,6 +55,7 @@
             <div id="output">
                 <h2>Your message will<br/> appear here.</h2>
             </div>
+            <a name="bottom"></a>
         </div>
 
     </div>
